src/test/ui/nll/mir_check_cast_closure.stderr
error: lifetime may not live long enough
  --> $DIR/mir_check_cast_closure.rs:7:5
   |
LL | fn bar<'a, 'b>() -> fn(&'a u32, &'b u32) -> &'a u32 {
   |        --  -- lifetime `'b` defined here
   |        |
   |        lifetime `'a` defined here
LL |     let g: fn(_, _) -> _ = |_x, y| y;
LL |     g
   |     ^ returning this value requires that `'b` must outlive `'a`

error: aborting due to previous error

